[project]
name = "helmclient"
requires-python = ">=3.7"
readme = "README.md"
description = "Helm client"
dynamic = ["version", "dependencies"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
namespaces = true
exclude = ["*.tests", "*.tests.*", "tests.*", "tests", "helm.tests*", "helm.tests.*"]
include = ["helm", "helm.*"]

[tool.setuptools.dynamic]
version = { attr = "helmclient._version.__version__" }
dependencies = { file = "requirements.txt" }

[tool.pytest.ini_options]
testpaths = ["helm/tests"]
